--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "browserify source/client.js -t babelify --outfile public/index.js"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +15,7 @@
     "babel-loader": "^6.4.1",
     "babel-preset-env": "^1.5.2",
     "babel-preset-react": "^6.24.1",
+    "babelify": "^7.3.0",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1"
   },
